--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,21 +16,21 @@ jobs:
 
       - name: Connect to EC2 and Deploy
         env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOSTNAME: ${{ secrets.SSH_HOST }}
-          USER_NAME: ${{ secrets.SSH_USER }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_USER: ${{ secrets.SSH_USER }}
 
         run: |
   
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
 
           rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" && 
           sudo mkdir -p /var/www/html/myapp && 
-          sudo chown -R ${USER_NAME}:${USER_NAME} /var/www/html/myapp &&
+          sudo chown -R root:root /var/www/html/myapp &&
           sudo chmod 755 /var/www/html/myapp && 
-          ./ ${USER_NAME}@${HOSTNAME}:/var/www/html/myapp/
+          ./ ${SSH_USER}@${SSH_HOST}:/var/www/html/myapp/
           
-          ssh -i private_key -o StrictHostKeyChecking=no ${USER_NAME}@${HOSTNAME} << 'EOF'
+          ssh -i private_key -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} << 'EOF'
             cd /var/www/html/myapp
             npm install
             npm run build
