--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
         run: |
   
           echo "$SSH_PRIVATE_KEY" > private_key && 
-          chmod 600 private_key && 
+          chmod 600 private_key &&
+          touch ~/.ssh/known_hosts &&
+          chmomd 755 ~/.ssh/known_hosts &&
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
           rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" && 
