--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,44 @@
-name: Deploy React App to EC2 and Serve with Nginx
+name: Deploy React App to Nginx on EC2
 
 on:
   push:
     branches:
-      - master
+      - master  # Triggers workflow when changes are pushed to master branch
 
 jobs:
   deploy:
-    name: Deploy to EC2
+    name: Deploy React App
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Connect to EC2 and Deploy
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-
+      - name: Setup SSH Key
         run: |
-  
-          echo "$SSH_PRIVATE_KEY" > private_key && 
-          chmod 600 private_key &&
-          touch ~/.ssh/known_hosts &&
-          chmomd 755 ~/.ssh/known_hosts &&
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-          rsync -avz --delete -e "ssh -i private_key -o StrictHostKeyChecking=no" && 
-          sudo mkdir -p /var/www/html/myapp && 
-          sudo chown -R root:root /var/www/html/myapp &&
-          sudo chmod 755 /var/www/html/myapp && 
-          ./ ${SSH_USER}@${SSH_HOST}:/var/www/html/myapp/
-          
-          ssh -i private_key -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} << 'EOF'
+      - name: Verify EC2 Connection
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+            echo "✅ Successfully Connected to EC2"
+            hostname -I
+            whoami
+            df -h
+          EOF
+
+      - name: Copy React App Files to EC2
+        run: |
+          rsync -avz --delete -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/myapp/
+
+      - name: Install Dependencies & Build React App on EC2
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd /var/www/html/myapp
             npm install
             npm run build
-            sudo rm -rf /var/www/html/*
-            sudo cp -r build/* /var/www/html/
-            sudo systemctl restart nginx
+            sudo systemctl restart nginx  # Restart Nginx to serve new build
           EOF
