--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,3 +38,4 @@ jobs:
           script: |
             echo "Deploying client: ${{ inputs.client_id }}"
             ./deploy.sh ${{ inputs.client_id }}
+            ls -ltr
