--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,6 @@ on:
       repo:
         description: 'GitHub repo (e.g., OKInfimatrix/test1_repo)'
         required: true
-      tag:
-        description: 'Git Tag to Deploy'
-        required: true
 
 jobs:
   deploy:
@@ -22,11 +19,11 @@ jobs:
     environment: ${{ inputs.client_name }}
 
     steps:
-      - name: Checkout selected repo and tag
+      - name: Checkout selected repo at tag
         uses: actions/checkout@v4
         with:
           repository: ${{ inputs.repo }}
-          ref: ${{ inputs.tag }}
+          ref: ${{ github.ref_name }}  # Uses the tag from the event
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy via SSH
@@ -37,7 +34,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             echo "Deploying client: ${{ inputs.client_id }}"
-            ./deploy.sh ${{ inputs.client_id }}
             cd simple-reactjs-app/
-            git pull origin master
+            git fetch --tags
+            git checkout ${{ github.ref_name }}
             ls -ltr
